[Eboutic] Fix double quote issue & improved user experience on small screen (#522)
* Fix #511 Regex issue with escaped double quotes

* Fix basket being when reloading the page (when cookie != "")

+ Added JSDoc
+ Cleaned some code

* Fix #509 Improved user experience on small screens

* Fix css class not being added back when reloading page

* CSS Fixes (see description)

+ Fixed overlaping item title with the cart emoji on small screen
+ Fixed minimal size of the basket on small screen (full width)

* Added darkened background circle to items with no image

* Fix issue were the basket could be None


* Edited CSS to have bette img ratio & the 🛒 icon

Adapt, Improve, Overcome

* Moved basket down on small screen size

--- a/eboutic/static/eboutic/css/eboutic.css
+++ b/eboutic/static/eboutic/css/eboutic.css
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 765px) {
     #eboutic {
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
         margin: 10px;
         row-gap: 20px;
@@ -38,6 +38,7 @@
         margin-top: 4px;
     }
     #basket {
+        width: -webkit-fill-available;
     }
 }
 
@@ -52,23 +53,39 @@
     margin-bottom: 10px
 }
 
+#eboutic .item-row {
+    gap: 10px;
+}
+
 #eboutic .item-name {
-    flex: 1;
+    word-break: break-word;
+    width: 100%;
+    line-height: 100%;
 }
 
-#eboutic .item-price, #eboutic .item-quantity {
-    width: 65px;
-}
-
-#eboutic .item-quantity {
+#eboutic .fa-plus,
+#eboutic .fa-minus {
+    cursor: pointer;
+    background-color: #354a5f;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 10px;
+    line-height: 10px;
+    width: 10px;
     text-align: center;
 }
 
-#eboutic .fa-plus, #eboutic .fa-minus {
-    cursor: pointer;
+#eboutic .item-quantity {
+    min-width: 65px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    gap: 5px;
 }
 
 #eboutic .item-price {
+    min-width: 65px;
     text-align: right;
 }
 
@@ -91,44 +108,65 @@
     column-gap: 15px;
     row-gap: 15px;
 }
-
-@media screen and (max-width: 765px) {
-    #eboutic #catalog {
-        row-gap: 15px;
-    }
-
-    #eboutic section {
-        text-align: center;
-    }
-
-    #eboutic .product-group {
-        justify-content: space-around;
-    }
-}
-
 #eboutic .product-button {
     position: relative;
     box-sizing: border-box;
-    min-width: 120px;
-    max-width: 150px;
-    padding: 10px;
+    min-height: 180px;
+    height: fit-content;
+    width: 150px;
+    padding: 15px;
     overflow: hidden;
     box-shadow: rgb(60 64 67 / 30%) 0 1px 3px 0, rgb(60 64 67 / 15%) 0 4px 8px 3px;
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 5px;
+    justify-content: flex-start;
+}
+
+#eboutic .product-button.selected {
+    animation: bg-in-out 1s ease;
+    background-color: rgb(216, 236, 255);
+}
+
+#eboutic .product-button.selected::after {
+    content: "🛒";
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 12px 2px rgb(0 0 0 / 14%);
+    background-color: white;
+    width: 20px;
+    height: 20px;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 #eboutic .product-button:active {
     box-shadow: none;
 }
 
-#eboutic .product-button img, #eboutic .product-button .fa {
-    margin: 0;
+#eboutic .product-image {
+    width: 100%;
+    height: 100%;
+    min-height: 70px;
+    max-height: 70px;
+    object-fit: contain;
     border-radius: 4px;
-    height: 40px;
-    line-height: 40px;
+    line-height: 70px;
+    margin-bottom: 15px;
+}
+
+#eboutic i.product-image {
+    background-color: rgba(173, 173, 173, 0.2);
+}
+
+#eboutic .product-description h4 {
+    font-size: .75em;
+    word-break: break-word;
+    margin: 0 0 5px 0;
 }
 
 #eboutic .product-button p {
@@ -152,8 +190,9 @@
     font-weight: normal;
     color: white;
     min-width: 60px;
-    padding: 5px 10px;
+    padding: 10px 15px;
 }
+
 #eboutic .catalog-buttons .validate {
     background-color: #354a5f;
 }
@@ -174,4 +213,51 @@
 
 #eboutic .catalog-buttons form {
     margin: 0;
+}
+
+@media screen and (max-width: 765px) {
+    #eboutic #catalog {
+        row-gap: 15px;
+        width: 100%;
+    }
+
+    #eboutic section {
+        text-align: center;
+    }
+
+    #eboutic .product-group {
+        justify-content: space-around;
+        flex-direction: column;
+    }
+
+    #eboutic .product-group .product-button {
+        min-height: 100px;
+        width: 100%;
+        max-width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    #eboutic .product-group .product-description {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    #eboutic .product-description h4 {
+        text-align: left;
+        max-width: 90%;
+    }
+
+    #eboutic .product-image {
+        margin-bottom: 0px;
+        max-width: 70px;
+    }
+}
+
+@keyframes bg-in-out {
+    0%   { background-color: white; } 
+    100% { background-color: rgb(216, 236, 255); }
 }
